// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Columns with array child renders 1`] = `
<div
  className="Columns Columns--flex-grow Columns--gutter-small"
>
  <Column
    flexBasis="19em"
    key="col-0"
  >
    <div
      key="0"
    >
      Joe
    </div>
  </Column>
  <Column
    flexBasis="19em"
    key="col-1"
  >
    <div
      key="1"
    >
      Joe
    </div>
  </Column>
</div>
`;

exports[`Columns with node child renders 1`] = `
<div
  className="Columns Columns--flex-grow Columns--gutter-small"
>
  <Column
    flexBasis="19em"
    key="col-null"
  >
    <p>
      test
    </p>
  </Column>
</div>
`;
